Update email address

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	required = true
 [user]
 	name = Robby Stokoe
-	email = rstokoe@tracefirst.com
+	email = robert.stokoe@revzilla.com
 [push]
 	default = matching
 [core]
